RESOLVED FIXED228874
MallocBench: fix ODR violation
https://bugs.webkit.org/show_bug.cgi?id=228874
Summary MallocBench: fix ODR violation
Michael Catanzaro
Reported 2021-08-06 14:25:28 PDT
When built with LTO enabled, GCC will warn about violations of C++'s one-definition rule. MallocBench has two different Objects in two different files, which is illegal. We could rename one of them, but I decided it's simplest to just put them each in anonymous namespaces in order to restrict them to file scope.
Attachments
Patch (2.24 KB, patch)
2021-08-06 14:27 PDT, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2021-08-06 14:27:18 PDT
Geoffrey Garen
Comment 2 2021-08-06 15:05:04 PDT
Comment on attachment 435087 [details] Patch r=me
EWS
Comment 3 2021-08-06 15:13:39 PDT
Committed r280738 (240324@main): <https://commits.webkit.org/240324@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 435087 [details].
Radar WebKit Bug Importer
Comment 4 2021-08-06 15:14:17 PDT
Note You need to log in before you can comment on or make changes to this bug.