MallocBench: fix ODR violation https://bugs.webkit.org/show_bug.cgi?id=228874

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2021-08-06
Reviewed by Geoffrey Garen.

When built with LTO enabled, GCC will warn about violations of C++'s one-definition rule.
MallocBench has two different Objects in two different files, which is illegal. We could
rename one of them, but I decided it's simplest to just put them each in anonymous
namespaces in order to restrict them to file scope.

* MallocBench/MallocBench/big.cpp:
* MallocBench/MallocBench/stress.cpp:

Canonical link: https://commits.webkit.org/240324@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280738 268f45cc-cd09-0410-ab3c-d52691b4dbfc